force-app/main/default/objects/PlanBenefit__c/PlanBenefit__c.object-meta.xml
<CustomObject>
    <description>Represents the standard benefits available under a plan that the purchaser offers to their members.</description>
    <label>Plan Benefit</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PlanBenefit</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>