force-app/main/default/objects/PlanBenefit__c/fields/FamilyInNetworkDeductible__c.field-meta.xml
<CustomField>
    <fullName>FamilyInNetworkDeductible__c</fullName>
    <inlineHelpText>The amount a member pays for health care provided by the health plan’s preferred providers for all family members. When this amount is reached, the plan starts to contribute towards treatment.</inlineHelpText>
    <label>Family InNetwork Deductible Amt</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>