force-app/main/default/objects/PlanBenefit__c/fields/FamilyOutofNetworkDeductible__c.field-meta.xml
<CustomField>
    <fullName>FamilyOutofNetworkDeductible__c</fullName>
    <inlineHelpText>The amount a member pay for health care provided by non-preferred providers for all family members before this plan starts to contribute towards treatment.</inlineHelpText>
    <label>Family OutofNetwork Deductible Amt</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>