force-app/main/default/objects/PlanBenefit__c/fields/FamilyOutofNetworkOutofPocket__c.field-meta.xml
<CustomField>
    <fullName>FamilyOutofNetworkOutofPocket__c</fullName>
    <inlineHelpText>The most a member pays during a coverage year for health care provided by non-preferred providers for all family members. It includes deductibles, copayments, and coinsurance, but is in addition to premiums.</inlineHelpText>
    <label>Family OutofNetwork OutofPocket Max</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>