force-app/main/default/objects/PlanBenefit__c/fields/IndividualInNetworkDeductible__c.field-meta.xml
<CustomField>
    <fullName>IndividualInNetworkDeductible__c</fullName>
    <inlineHelpText>The amount a member pays for health care provided by the health plan’s preferred providers to any one family member. When this amount is reached, the plan starts to contribute towards treatment.</inlineHelpText>
    <label>Individual In Network Deductible Amt</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>