force-app/main/default/objects/PlanBenefit__c/fields/IndividualInNetworkOutofPocket__c.field-meta.xml
<CustomField>
    <fullName>IndividualInNetworkOutofPocket__c</fullName>
    <inlineHelpText>The most a member pays during a coverage year for health care provided by the health plan’s preferred providers for any one family member. It includes deductibles, copayments, and coinsurance, but excludes premiums.</inlineHelpText>
    <label>Individual In Network Out of Pocket Max</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>