force-app/main/default/objects/PlanBenefit__c/fields/IndividualOutofNetworkDeductible__c.field-meta.xml
<CustomField>
    <fullName>IndividualOutofNetworkDeductible__c</fullName>
    <inlineHelpText>The amount a member pays for health care provided by non-preferred providers to any one family member before this plan starts to contribute towards treatment.</inlineHelpText>
    <label>Individual OutofNetwork Deductible Amt</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>