force-app/main/default/objects/PlanBenefit__c/fields/IndividualOutofNetworkOutofPocket__c.field-meta.xml
<CustomField>
    <fullName>IndividualOutofNetworkOutofPocket__c</fullName>
    <inlineHelpText>The most a member pays during a coverage year for health care provided by non-preferred providers for any one family member. It includes deductibles, copayments, and coinsurance, but excludes premiums.</inlineHelpText>
    <label>Individual OutofNetwork OutofPocket Max</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>