force-app/main/default/objects/PlanBenefit__c/fields/InNetworkLifetimeMaximum__c.field-meta.xml
<CustomField>
    <fullName>InNetworkLifetimeMaximum__c</fullName>
    <inlineHelpText>The most a member pays during the lifetime membership on this plan for health care provided by the health plan’s preferred providers. It includes deductibles, copayments, and coinsurance, but excludes premiums.</inlineHelpText>
    <label>InNetwork Lifetime Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>