force-app/main/default/objects/PlanBenefit__c/fields/OutofNetworkCoinsuranceAmount__c.field-meta.xml
<CustomField>
    <fullName>OutofNetworkCoinsuranceAmount__c</fullName>
    <inlineHelpText>The amount a member contributes towards treatment undertaken by non-preferred providers.</inlineHelpText>
    <label>OutofNetwork Coinsurance Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>