force-app/main/default/objects/PlanBenefit__c/fields/PrimaryCareCopay__c.field-meta.xml
<CustomField>
    <fullName>PrimaryCareCopay__c</fullName>
    <inlineHelpText>The amount a member contributes towards primary care treatment.</inlineHelpText>
    <label>Primary Care Copay Amt</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>