force-app/main/default/objects/PlanBenefit__c/fields/PurchaserPlanId__c.field-meta.xml
<CustomField>
    <fullName>PurchaserPlanId__c</fullName>
    <inlineHelpText>The ID of the purchaser plan offering these benefits.</inlineHelpText>
    <label>Purchaser PlanId</label>
    <referenceTo>PurchaserPlan__c</referenceTo>
    <relationshipLabel>PlanBenefit</relationshipLabel>
    <relationshipName>PlanBenefitPurchaserPlan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>