force-app/main/default/objects/PlanBenefit__c/fields/UrgentCareCopay__c.field-meta.xml
<CustomField>
    <fullName>UrgentCareCopay__c</fullName>
    <inlineHelpText>The amount a member contributes towards urgent care.</inlineHelpText>
    <label>UrgentCare Copay Amt</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>